cmake_minimum_required(VERSION 3.0.0)
project(mod_photo VERSION 0.1.0)

include(CTest)
enable_testing()
include_directories("/home/ilgiz/NEWretkslp/retk2")
include_directories("/home/ilgiz/NEWretkslp/apks_slp")
include_directories("/home/ilgiz/CodeProjects/mod_photo")
#include_directories("/home/ilgiz/CodeProjects/mod_photo/slp")
#include_directories("/home/ilgiz/CodeProjects/mod_photo/retk2")
set(SOURCES main.cpp Programm.cpp Programm.hpp PWM.cpp PWM.hpp dbc_client.hpp dbc_client.cpp)
add_executable(mod_photo ${SOURCES})
target_link_libraries(mod_photo /home/ilgiz/NEWretkslp/retk2/_linux/libretk2.a /home/ilgiz/NEWretkslp/apks_slp/bin/Release/libslp.a)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
